--- a/Frontend/Geoportal/Resources/Languages/AppResources.ru.resx
+++ b/Frontend/Geoportal/Resources/Languages/AppResources.ru.resx
@@ -321,4 +321,7 @@
   <data name="Logout" xml:space="preserve">
     <value>Выйти</value>
   </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Загрузка...</value>
+  </data>
 </root>
